# MARTA

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
src/: CITATION.cff
src/MARTA/: RTA_analysis.py  RTA_cli.py  Xtract_coverage.py  Xtract_coverage_cli.py
src/MARTA/config/: default_config.yml
